# wiskess_rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TESTS.md  iocs.txt  output.txt
config/: artefacts.yaml  artefacts_linux.yaml  collect_win.yaml  file_execution.yaml  intense_win.yaml  main_win.yaml  test.yaml  test_win.yaml  test_win_filesystem.yaml  win_art_linux.yaml
config/linux/: artefacts.yaml  main.yaml
config/windows/: artefacts.yaml  intense.yaml  main.yaml
src/: art.rs  configs.rs  init.rs  lib.rs  main.rs  main__.rs  ops.rs  scripts.rs  setup.rs  test-rust.rs  utils.rs  webs.rs  whipped.rs
src/figlet/: standard.flf
src/init/: scripts.rs  setup.rs
src/ops/: exe_ops.rs  file_ops.rs  get_files.rs  valid_ops.rs  wiskess.rs
src/tests/: archive_processing_tests.rs  cli_tests.rs  config_tests.rs  date_validation_tests.rs  file_ops_tests.rs  mod.rs  os_config_tests.rs  path_validation_tests.rs  utils_tests.rs  whipped_tests.rs  wiskess_tests.rs
src/tests/fixtures/: sample_iocs.txt  test_artefacts.yaml  test_main.yaml
src/whipped/: whip_az.rs  whip_main.rs  whip_s3.rs
templates/: wiskess_task.html
tools/: BrowsingHistoryView.cfg  BrowsingHistoryView.chm  CCM_RUA_Finder.py  Executablelist.ps1  MISP.yaml  MISPAPI.py  PyWMIPersistenceFinder.py  bmc_run.py  enrich_config.yaml  jq_chainsaw_srum_filter.txt  polars_enrich.py  polars_hostinfo.py  polars_tln.py  polars_vector_tln.py  sbecmd_linux.py  setup.ps1  setup_get_git.py  timeline-wiskess.conf  uac_vector.yaml  whipped.ps1  whipped_imageprocess.ps1
tools/Arsenal-Image-Mounter-v3.9.239/: Arsenal Recon - End User License Agreement.txt  ArsenalImageMounter.deps.json  readme.txt  readme_cli.txt
tools/jq_filters/: jq_chainsaw_srum_filter_net.txt  jq_ioc_summary_filter.txt
web/static/: form.html  index.html  whipped.html  wiskess.html
