[package]
name = "wiskess_rust"
version = "0.1.0"
edition = "2021"
author = "Gavin Hull"
about = "Automated Windows Disk Processing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.3.21", features = ["derive", "env"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
inquire = "0.6.2"
chrono = "0.4.26"
glob = "0.3.1"
regex = "1.9.4"
execute = "0.2.12"
rayon = "1.7.0"
num_cpus = "1.16.0"
powershell_script = "1.1.0"
load_file = "1.0.1"
ctrlc = "3.4.1"
struct_iterable = "0.1.1"
urlencoding = "2.1.3"
