[package]
name = "wiskess_rust"
version = "0.0.5"
edition = "2021"
author = "Gavin Hull"
about = "Automated Windows Disk Processing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.3.21", features = ["derive", "env"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
inquire = "0.6.2"
chrono = "0.4.26"
glob = "0.3.1"
regex = "1.9.4"
execute = "0.2.12"
rayon = "1.7.0"
num_cpus = "1.16.0"
load_file = "1.0.1"
ctrlc = "3.4.1"
struct_iterable = "0.1.1"
urlencoding = "2.1.3"
simple_logger = "4.3.3"
log = "0.4.20"
tabled = "0.15.0"
anyhow = "1.0.79"
ntfs = "0.4.0"
walkdir = "2.4.0"
run_script = "0.10.1"
indicatif = "0.17.8"
rand = "0.8.5"
figrs = "0.3.1"
console = "0.15.8"
actix-web = "4.6.0"
actix-multipart = "0.6.2"
env_logger = "0.11.3"
sysinfo = "0.30.13"
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
reqwest = { version = "0.12.5", features = ["blocking","json"]}
mime_guess = "2.0.5"
futures = "0.3.30"
tokio-stream = "0.1.15"
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"
azure_storage_blobs = "0.20.0"
azure_storage = "0.20.0"
azure_core = "0.20.0"
serde_json = "1.0.125"
url = "2.5.2"
fs_extra = "1.3.0"
crossbeam-channel = "0.5.14"
crossbeam = "0.8.4"
windows-elevate = "0.1.0"
